# prompting

./: LICENSE  README.md  demo.ipynd  pyproject.toml  setup.cfg
prompting/: __init__.py  prompt_manager.py
