[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompting"
version = "0.1.1"
description = "Unified template loader for local and Supabase-stored Jinja2 templates"
authors = [{ name="Thomas J. Daley", email="dev@jdbot.us" }]
requires-python = ">=3.10"
dependencies = [
    "jinja2",
    "pydantic-settings",
    "python-frontmatter",
    "supabase"
]

[tool.setuptools.packages.find]
where = ["."]
