[metadata]
name = prompt-manager
version = 0.1.0
description = Template loader and renderer with support for local files and Supabase.
author = Your Name
license = MIT

[options]
packages = find:
python_requires = >=3.10
install_requires =
    jinja2
    pydantic
    python-frontmatter
    supabase

[options.package_data]
* = *.j2
